<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".EditorActivity"
    tools:showIn="@layout/activity_editor">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/note_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/enter_title"
            android:inputType="textMultiLine|textCapSentences" />

        <EditText
            android:id="@+id/note_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/text_margin"
            android:hint="@string/enter_description"
            android:inputType="textMultiLine|textCapSentences" />

        <TextView
            android:id="@+id/date_label"
            style="@style/input_label"
            android:layout_width="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/date_label"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/date_value"
            style="@style/input_value"

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:textSize="24sp"
            tools:text="@string/today_date" />

        <ImageButton
            android:id="@+id/edit_date_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/edit_date"
            app:srcCompat="@drawable/ic_edit" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>